# cub3d

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  claudias_minilibx_man_but_for_girls.md  compile_commands.json  map1.cub  notes.org  old_Makefile  shell.nix  test_cub3d.py  valgrind.supp
include/: cub3d.h  init.h  parsing.h  player.h  raycaster.h
levels/herness/: beams.xpm  map1.cub  output.xpm
levels/herness/walls/: 57.xpm  61.xpm  65.xpm  67.xpm
levels/paradise/: map1.cub  map2.cub
levels/paradise/textures/: brick1.xpm  brick2.xpm  face.xpm  window.xpm
levels/spaceshiper/: map1.cub
levels/spaceshiper/spaceship/: sprite_1.xpm  sprite_10.xpm  sprite_16.xpm  sprite_17.xpm  sprite_19.xpm  sprite_2.xpm  sprite_20.xpm  sprite_22.xpm  sprite_23.xpm  sprite_4.xpm  sprite_5.xpm  sprite_9.xpm
maps/: L-shape.cub  O-shape.cub  backwards_c.cub  pyramid.cub
maps/assets/textures/: west.xpm
sprites/: sprite_0.xpm  sprite_11.xpm  sprite_12.xpm  sprite_13.xpm  sprite_14.xpm  sprite_15.xpm  sprite_18.xpm  sprite_21.xpm  sprite_3.xpm  sprite_6.xpm  sprite_7.xpm  sprite_8.xpm
src/: _debug.c  allocate_contiguous_map.c  arg_parsing.c  buffer.c  cast_ray.c  cleanup.c  draw_wall.c  exit.c  find_player.c  game_loop.c  init.c  input_mapping.c  main.c  map_is_closed.c  movement.c  player.c  print_vars.c  read_file.c  read_map.c  read_store.c  read_utils.c  read_validate.c  render_frame.c  render_minimap.c  render_utils.c  utils.c
src/parsing/: arg_parsing.c  read_map.c
tests/: Makefile  test_init_game.c
tests/test/: Testinit.c
(+9 files in other folders)
